Изменить миксины медиа запросов

--- a/app/scss/blocks/_breadcrumbs.scss
+++ b/app/scss/blocks/_breadcrumbs.scss
@@ -9,7 +9,7 @@
   position: relative;
   margin-right: 30px;
 
-  @include px600 {
+  @include max-sm {
     margin-right: 18px;
   }
 }
@@ -23,7 +23,7 @@
   padding-left: 7px;
   color: $color-rolling-stone;
 
-  @include px600 {
+  @include max-sm {
     right: -12px;
   }
 }
@@ -43,7 +43,7 @@
     text-decoration: underline;
   }
 
-  @include px810 {
+  @include max-lg {
     font-size: 16px;
   }
 }
