--- a/app/scss/blocks/_full-card-info.scss
+++ b/app/scss/blocks/_full-card-info.scss
@@ -2,15 +2,15 @@
   display: block;
   padding: 61px 70px;
 
-  @include px950 {
+  @include max-xl {
     padding: 51px 60px;
   }
 
-  @include px810 {
+  @include max-lg {
     padding: 34px 45px;
   }
 
-  @include px375 {
+  @include max-xxs {
     padding: 30px 35px;
   }
 }
@@ -31,11 +31,11 @@
   line-height: 19px;
   color: $color-bunker;
 
-  @include px810 {
+  @include max-lg {
     margin-bottom: 32px;
   }
 
-  @include px720 {
+  @include max-md {
     max-width: 100%;
   }
 }
@@ -43,7 +43,7 @@
 .full-card-info__color {
   margin-bottom: 40px;
 
-  @include px810 {
+  @include max-lg {
     margin-bottom: 30px;
   }
 }
