--- a/app/scss/blocks/_full-card.scss
+++ b/app/scss/blocks/_full-card.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
 
-  @include px720 {
+  @include max-md {
     flex-direction: column;
   }
 }
@@ -24,11 +24,11 @@
   padding-left: 15px;
   max-width: 570px;
 
-  @include px950 {
+  @include max-xl {
     margin-right: 0;
   }
 
-  @include px720 {
+  @include max-md {
     margin-right: auto;
     margin-bottom: 40px;
     margin-left: auto;
@@ -41,7 +41,7 @@
   padding-left: 0;
   max-width: 570px;
 
-  @include px720 {
+  @include max-md {
     margin-right: 0;
     max-width: 100%;
   }
