--- a/app/scss/blocks/_products.scss
+++ b/app/scss/blocks/_products.scss
@@ -4,15 +4,15 @@
   list-style-type: none;
   padding: 0;
 
-  @include px720 {
+  @include max-md {
     padding: 0 50px;
   }
 
-  @include px500 {
+  @include max-xs {
     padding: 0;
   }
 
-  @include px375 {
+  @include max-xxs {
     flex-direction: column;
     align-items: center;
   }
@@ -22,15 +22,15 @@
   flex-basis: calc((100% - 30px * 4) / 4);
   margin: 15px;
 
-  @include px950 {
+  @include max-xl {
     flex-basis: calc((100% - 30px * 3) / 3);
   }
 
-  @include px720 {
+  @include max-md {
     flex-basis: calc((100% - 30px * 2) / 2);
   }
 
-  @include px375 {
+  @include max-xxs {
     flex-grow: 0;
     flex-basis: 270px;
   }
