--- a/app/pug/layout/main-template.pug
+++ b/app/pug/layout/main-template.pug
@@ -28,5 +28,5 @@ html(lang="en" class= htmlClass).full-height
       include ../sections/_footer.pug
 
     block scripts
-      script(src="js/focus-visible.min.js")
+      script(src="libs/js/focus-visible.min.js")
       script(src="js/script.min.js")
