Добавить aria-label кнопке бургер меню

--- a/app/pug/sections/_header.pug
+++ b/app/pug/sections/_header.pug
@@ -1,7 +1,7 @@
 header.site-header
   .container.site-header__container
     .site-header__burger-button
-      button(type="button").burger-button
+      button(type="button" aria-label="Открыть меню").burger-button
         span.burger-button__line
     if htmlClass === "index-page"
       a.logo.site-header__logo
