Изменить мобильное меню

--- a/app/scss/blocks/_site-header.scss
+++ b/app/scss/blocks/_site-header.scss
@@ -8,6 +8,18 @@
   background-color: $color-white;
   transition: box-shadow 0.3s ease;
 
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: $color-white;
+  }
+
   @include max-md {
     padding: 16px 0;
   }
@@ -44,6 +56,8 @@
 }
 
 .site-header__site-navigation {
+  position: relative;
+  z-index: 101;
   flex-basis: 45%;
   order: 1;
 
@@ -55,19 +69,19 @@
     z-index: 1;
     display: none;
     overflow: hidden;
-    max-height: 0;
     box-shadow:
       inset 0 4px 4px -2px rgba($color-bunker, 20%),
       0 2px 4px 0 rgba($color-bunker, 20%);
     background-color: $color-white;
-    transform: translateY(100%);
-    transition: max-height 0.3s linear;
+    transform: translateY(-100%);
+    transition: transform 0.3s linear;
   }
 }
 
 .site-header__site-navigation--active {
   @include max-md {
     transform: translateY(100%);
+    transition: transform 0.3s linear;
   }
 }
 
