--- a/app/pug/sections/_news.pug
+++ b/app/pug/sections/_news.pug
@@ -3,7 +3,7 @@ section.news.index-page__news
     .section-header.news__section-header
       h2.section-header__title News
       a(href="#").section-header__link View all
-    article.news-post
+    article.news-post.news__post
       .news-post__image-wrapper
         img(src="img/news-post.jpg" width="700" height="370", alt="G- Star Updates Its Sustainable Collection").news-post__image
       .news-post__outer
