--- a/app/scss/blocks/_news.scss
+++ b/app/scss/blocks/_news.scss
@@ -1,3 +1,11 @@
 .news__section-header {
   margin-bottom: 62px;
 }
+
+.news__post {
+  @include max-xl {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 700px;
+  }
+}
