--- a/app/scss/blocks/_products-card.scss
+++ b/app/scss/blocks/_products-card.scss
@@ -1,6 +1,7 @@
 .products-card__link {
   display: block;
   margin-bottom: 21px;
+  height: 349px;
   transition: opacity 0.3s ease-in-out;
 
   &:focus {
@@ -10,10 +11,21 @@
   @include hover {
     opacity: 0.7;
   }
+
+  @include max-sm {
+    height: 300px;
+  }
+
+  @include max-xs {
+    height: 280px;
+  }
 }
 
 .products-card__image {
   display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .products-card__title {
