--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -20,7 +20,7 @@
 @import "catalog-page";
 @import "catalog-top";
 @import "catalog";
-@import "dropdown-filter";
+@import "sort-filter";
 @import "cards-counter";
 @import "card-page";
 @import "product";
