--- a/app/scss/blocks/_catalog-page.scss
+++ b/app/scss/blocks/_catalog-page.scss
@@ -42,6 +42,10 @@
   }
 }
 
+.catalog-page__item .products-card__link {
+  height: 270px;
+}
+
 .catalog-page__item:not(:nth-of-type(2n)) {
   @include max-md {
     margin-right: 35px;
