Исправить отступы в описании карточки товара

--- a/app/scss/blocks/_full-card-info.scss
+++ b/app/scss/blocks/_full-card-info.scss
@@ -1,6 +1,6 @@
 .full-card-info__content {
   display: block;
-  padding: 61px 70px;
+  padding: 61px 70px 69px;
 
   @include max-xl {
     padding: 51px 60px;
