Заменить Swiper на плагин-слайдера Splide

--- a/app/pug/pages/card.pug
+++ b/app/pug/pages/card.pug
@@ -6,10 +6,10 @@ block vars
   - var bodyClass = "card-page__body";
 
 block prepend styles
-  link(rel="stylesheet", href="libs/css/swiper-bundle.min.css")
+  link(rel="stylesheet", href="libs/css/splide.min.css")
 
 block content
   include ../sections/_card-main.pug
 
 block prepend scripts
-  script(src="libs/js/swiper-bundle.min.js")
+  script(src="libs/js/splide.min.js")
