--- a/app/pug/sections/_product-card-gallery.pug
+++ b/app/pug/sections/_product-card-gallery.pug
@@ -1,28 +1,30 @@
 .full-card__gallery.full-card-gallery
-  button(type="button").swiper-button-next.full-card-gallery__button.full-card-gallery__button--next
-  button(type="button").swiper-button-prev.full-card-gallery__button.full-card-gallery__button--prev
+  button(type="button").full-card-gallery__button.full-card-gallery__button--next
+  button(type="button").full-card-gallery__button.full-card-gallery__button--prev
   .full-card-gallery__sliders
-    .swiper.full-card-slider.full-card-gallery__slider
-      .swiper-wrapper
-        .swiper-slide.full-card-slider__slide
-          img(src="img/card-image-5.jpg", width="400" height="523" alt="Overalls photo 5").full-card-slider__image
-        .swiper-slide.full-card-slider__slide
-          img(src="img/card-image-1.jpg", width="400" height="523" alt="Overalls photo 1").full-card-slider__image
-        .swiper-slide.full-card-slider__slide
-          img(src="img/card-image-2.jpg", width="400" height="523" alt="Overalls photo 2").full-card-slider__image
-        .swiper-slide.full-card-slider__slide
-          img(src="img/card-image-3.jpg", width="400" height="523" alt="Overalls photo 3").full-card-slider__image
-        .swiper-slide.full-card-slider__slide
-          img(src="img/card-image-4.jpg", width="400" height="523" alt="Overalls photo 4").full-card-slider__image
-    .swiper(thumbsslider).full-card-slider-thumbs
-      .swiper-wrapper
-        .swiper-slide.full-card-slider-thumbs__slide
-          img(src="img/card-image-5-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
-        .swiper-slide.full-card-slider-thumbs__slide
-          img(src="img/card-image-1-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
-        .swiper-slide.full-card-slider-thumbs__slide
-          img(src="img/card-image-2-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
-        .swiper-slide.full-card-slider-thumbs__slide
-          img(src="img/card-image-3-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
-        .swiper-slide.full-card-slider-thumbs__slide
-          img(src="img/card-image-4-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
+    .splide.full-card-slider.full-card-gallery__slider
+      .splide__track
+        ul.splide__list
+          li.splide__slide.full-card-slider__slide
+            img(src="img/card-image-5.jpg", width="400" height="523" alt="Overalls photo 5").full-card-slider__image
+          li.splide__slide.full-card-slider__slide
+            img(src="img/card-image-1.jpg", width="400" height="523" alt="Overalls photo 1").full-card-slider__image
+          li.splide__slide.full-card-slider__slide
+            img(src="img/card-image-2.jpg", width="400" height="523" alt="Overalls photo 2").full-card-slider__image
+          li.splide__slide.full-card-slider__slide
+            img(src="img/card-image-3.jpg", width="400" height="523" alt="Overalls photo 3").full-card-slider__image
+          li.splide__slide.full-card-slider__slide
+            img(src="img/card-image-4.jpg", width="400" height="523" alt="Overalls photo 4").full-card-slider__image
+    .splide.full-card-slider-thumbs
+      .splide__track
+        ul.splide__list
+          li.splide__slide.full-card-slider-thumbs__slide
+            img(src="img/card-image-5-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
+          li.splide__slide.full-card-slider-thumbs__slide
+            img(src="img/card-image-1-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
+          li.splide__slide.full-card-slider-thumbs__slide
+            img(src="img/card-image-2-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
+          li.splide__slide.full-card-slider-thumbs__slide
+            img(src="img/card-image-3-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
+          li.splide__slide.full-card-slider-thumbs__slide
+            img(src="img/card-image-4-thumb.jpg", width="85" height="113").full-card-slider-thumbs__image
