--- a/app/scss/blocks/_full-card-gallery.scss
+++ b/app/scss/blocks/_full-card-gallery.scss
@@ -8,6 +8,7 @@
   height: auto;
   background-color: transparent;
   transition: background-color 0.1s ease-in-out;
+  cursor: pointer;
 
   &:focus {
     @include outline;
