--- a/app/scss/blocks/_full-card-slider-thumbs.scss
+++ b/app/scss/blocks/_full-card-slider-thumbs.scss
@@ -1,10 +1,19 @@
 .full-card-slider-thumbs__image {
   display: block;
   width: 100%;
-  height: 100%;
-  object-fit: contain;
+  height: 113px;
+  object-fit: cover;
 
   @include max-xxs {
     display: none;
   }
+}
+
+.full-card-slider-thumbs .splide__track--nav > .splide__list > .splide__slide {
+  border: none;
+}
+
+.full-card-slider-thumbs .splide__track--nav > .splide__list > .splide__slide.is-active {
+  border: none;
+  opacity: 0.7;
 }
