--- a/app/scss/blocks/_full-card-gallery.scss
+++ b/app/scss/blocks/_full-card-gallery.scss
@@ -1,11 +1,10 @@
 .full-card-gallery__button {
   position: static;
   flex-grow: 0;
-  flex-shrink: 1;
+  flex-shrink: 0;
   margin-top: 0;
   border: none;
-  width: 13%;
-  height: auto;
+  width: 12%;
   background-color: transparent;
   transition: background-color 0.1s ease-in-out;
   cursor: pointer;
@@ -25,6 +24,7 @@
 
 .full-card-gallery__button--next {
   order: 3;
+  margin-left: 10px;
 }
 
 .full-card-gallery__button--next::after {
@@ -33,6 +33,7 @@
 
 .full-card-gallery__button--prev {
   order: 1;
+  margin-right: 10px;
 }
 
 .full-card-gallery__button--prev::after {
@@ -40,12 +41,13 @@
 }
 
 .full-card-gallery__sliders {
-  flex-grow: 0;
+  flex-grow: 1;
   order: 2;
-  width: 70.1%;
+  max-width: 400px;
 
   @include max-xs {
     width: 70%;
+    max-width: unset;
   }
 }
 
