--- a/app/pug/sections/_product-card-description.pug
+++ b/app/pug/sections/_product-card-description.pug
@@ -1,4 +1,4 @@
-.full-card__info.full-card-info.product-card__decription
+.full-card__info.full-card-info.product__decription
   .full-card-info__content
     h1.full-card-info__title Overalls
     p.full-card-info__description Overalls in washed organic cotton denim. Collar, button fly, and adjustable belt at waist. Chest pockets with flap. Long, gently flared sleeves and straight legs with front pockets and back pockets.
